[project]
name = "Project name"
description = "Project description."
license = { text = "Proprietary" }
version = "0.1.0"
authors = [
    { name = "Will Keeling", email = "william_keeling@somewhere.com" }
]
dependencies = [
    'boto3==1.24.14',
    'celery==5.3.1',
    'connexion[swagger-ui]==2.14.0',
    'Flask==2.2.5',
    'Flask-Admin==1.6.1',
    'Flask-Migrate==4.0.4',
    'Flask-SQLAlchemy==3.0.3',
    'gunicorn==20.1.0',
    'influxdb-client[ciso]==1.29.1',
    'lorem',
    'psycopg2==2.9.3',
    'python-jose[cryptography]==3.3.0',
    'redis==4.6.0',
    'requests==2.28.0',
    'SQLAlchemy==2.0.15',
]

[project.optional-dependencies]
ci = [
    'black==23.3.0',
    'boto3-stubs==1.26.132',
    'celery-stubs==0.1.3',
    'flake8==6.0.0',
    'mypy==1.3.0',
    'pylint==2.14.3',
    'pylint_junit==0.3.2',
    'pytest==7.1.2',
    'pytest-cov==3.0.0',
    'pytest-mock==3.8.1',
    'requests-mock==1.9.3',
    'types-PyYAML==6.0.12.9',
    'types-influxdb-client==1.36.0.8',
    'types-python-jose==3.3.4.7',
    'types-requests==2.30.0.0',
]
development = [
    'boto3-stubs==1.26.132',
    'celery-stubs==0.1.3',
    'mypy==1.3.0',
    'pre-commit==2.19.0',
    'types-PyYAML==6.0.12.9',
    'types-influxdb-client==1.36.0.8',
    'types-python-jose==3.3.4.7',
    'types-requests==2.30.0.0',
]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
skip = ["migrations"]

[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.mypy]
exclude = [
]

[[tool.mypy.overrides]]
module = "connexion.*,flask_admin.*,wtforms.*,flask_migrate.*"
ignore_missing_imports = true
